<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/space_16"
    tools:context=".screens.expense.expensecreate.ExpenseCreateFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:text="@string/create_title"
        android:textSize="20sp"
        android:layout_marginHorizontal="@dimen/space_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <View
        android:id="@+id/viewBorder"
        android:layout_marginTop="@dimen/space_16"
        android:background="@color/gray_500"
        android:layout_marginEnd="@dimen/space_16"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/space_32"
        android:paddingVertical="@dimen/space_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewBorder"
        app:layout_constraintVertical_bias="1.0">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_32"
            android:hint="@string/description"
            app:boxCornerRadiusTopStart="@dimen/space_32"
            app:boxCornerRadiusTopEnd="@dimen/space_32"
            app:boxCornerRadiusBottomStart="@dimen/space_32"
            app:boxCornerRadiusBottomEnd="@dimen/space_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCost"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:hint="@string/cost"
            app:boxCornerRadiusTopStart="@dimen/space_32"
            app:boxCornerRadiusTopEnd="@dimen/space_32"
            app:boxCornerRadiusBottomStart="@dimen/space_32"
            app:boxCornerRadiusBottomEnd="@dimen/space_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescription">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextCost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroupExpenseType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutCost">

            <RadioButton
                android:id="@+id/radioButtonTypeBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_type_bill"/>

            <RadioButton
                android:id="@+id/radioButtonTypeRent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_type_rent"/>

            <RadioButton
                android:id="@+id/radioButtonTypeOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_type_other"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroupCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:checkedButton="@id/radioButtonTRY"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupExpenseType">

            <RadioButton
                android:id="@+id/radioButtonTRY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/currency_try"/>

            <RadioButton
                android:id="@+id/radioButtonUSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/currency_usd"/>

            <RadioButton
                android:id="@+id/radioButtonEUR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/currency_eur"/>

            <RadioButton
                android:id="@+id/radioButtonGBP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/currency_gbp"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/btn_add"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupCurrency"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>