<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/space_16"
    tools:context=".screens.profile.ProfileFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:text="@string/profile_title"
        android:textSize="20sp"
        android:layout_marginHorizontal="@dimen/space_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <View
        android:id="@+id/viewBorder"
        android:layout_marginTop="@dimen/space_16"
        android:background="@color/gray_500"
        android:layout_marginEnd="@dimen/space_16"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:hint="@string/hint_name"
        app:boxCornerRadiusTopStart="@dimen/space_32"
        app:boxCornerRadiusTopEnd="@dimen/space_32"
        app:boxCornerRadiusBottomStart="@dimen/space_32"
        app:boxCornerRadiusBottomEnd="@dimen/space_32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="@dimen/space_32"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/viewBorder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:checkedButton="@id/radioButtonNone"
        android:paddingHorizontal="@dimen/space_32"
        android:layout_marginTop="@dimen/space_32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:text="@string/gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:text="@string/gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/radioButtonNone"
            android:text="@string/gender_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSaveChanges"
        android:text="@string/btn_save"
        android:layout_marginTop="@dimen/space_32"
        android:layout_marginEnd="@dimen/space_32"
        app:cornerRadius="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radioGroupGender"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>