<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.onboarding.OnBoardingFragment1">

    <ImageView
        android:id="@+id/imageViewImage"
        app:srcCompat="@drawable/ic_archive"
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/content_description"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:text="@string/on_boarding_title_1"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/space_32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageViewImage"
        app:layout_constraintBottom_toTopOf="@id/textViewDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewDescription"
        android:text="@string/on_boarding_subtitle_1"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/space_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/FABSkip"
        android:text="@string/btn_skip"
        app:cornerRadius="@dimen/space_25"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginEnd="@dimen/space_16"
        android:layout_marginBottom="@dimen/space_32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>