<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_16"
    tools:context=".screens.onboarding.OnBoardingFragment3">

    <ImageView
        android:id="@+id/imageViewImage"
        app:srcCompat="@drawable/ic_cashier"
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewTitle"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/content_description"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:text="@string/on_boarding_title_3"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/space_16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/imageViewImage"
        app:layout_constraintBottom_toTopOf="@id/textViewDescription"
        app:layout_constraintStart_toEndOf="@id/imageViewImage"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewDescription"
        android:text="@string/on_boarding_subtitle_3"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/space_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintBottom_toBottomOf="@id/imageViewImage"
        app:layout_constraintStart_toEndOf="@id/imageViewImage"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:hint="@string/on_boarding_hint_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_32"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopStart="@dimen/space_32"
        app:boxCornerRadiusTopEnd="@dimen/space_32"
        app:boxCornerRadiusBottomStart="@dimen/space_32"
        app:boxCornerRadiusBottomEnd="@dimen/space_32"
        app:layout_constraintTop_toBottomOf="@id/imageViewImage"
        app:layout_constraintBottom_toTopOf="@id/FABStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/FABStart"
        android:text="@string/on_boarding_start_3"
        app:cornerRadius="@dimen/space_25"
        android:layout_marginTop="@dimen/space_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>