<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/space_16"
    android:paddingHorizontal="@dimen/space_8"
    tools:context=".screens.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutHeader"
        android:background="@drawable/home_header_style"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:padding="@dimen/space_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textViewWelcomeLabel"
            android:text="@string/home_label_welcome"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textViewUserName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/textViewUserName"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewWelcomeLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textViewUserGender"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/space_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/textViewUserName"
            app:layout_constraintBottom_toBottomOf="@id/textViewUserName"
            app:layout_constraintStart_toEndOf="@id/textViewUserName"/>

        <TextView
            android:id="@+id/textViewExpenseLabel"
            android:text="@string/home_label_expense"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textViewTotalExpense"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/textViewTotalExpense"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAlignment="textStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewExpenseLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/textViewExpenseLabel"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/homeCurrencies"
        android:weightSum="4"
        android:checkedButton="@id/radioButtonTRY"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/space_4"
        android:paddingHorizontal="@dimen/space_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioButtonTRY"
            android:text="@string/currency_try"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/radioButtonUSD"
            android:text="@string/currency_usd"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/radioButtonEUR"
            android:text="@string/currency_eur"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/radioButtonGBP"
            android:text="@string/currency_gbp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewExpenses"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/homeCurrencies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/FABAddExpense"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/white"
        app:backgroundTint="@color/orange"
        android:text="@string/btn_add"
        android:textColor="@color/white"
        android:layout_margin="@dimen/space_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>